--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
-    "json-server":"^0.17.0",
+    "json-server": "^0.17.0",
+    "orsys-tjs-meme": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
